position relative, fixed, absolute, z-index

--- a/CSS/Day 4/position.css
+++ b/CSS/Day 4/position.css
@@ -14,26 +14,34 @@
 #box1 {
     /* position: static;  default - no t/b/l/r apply on this position */
 
+    /* position: fixed;     relative to screen/view     */
     position: absolute;
     top: 0;
     left: 0;
     background-color: aqua;
+    z-index: 10;
 }
 
 #box2 {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 10px;
+    left: 10px;
     background-color: blue;
+    z-index: 0;
 }
 
 #box3 {
+    position: absolute;
+    top: 20px;
+    left: 20px;
     background-color: yellow;
+    z-index: 20;
 }
 
 #box4 {
-    position: relative;
-    bottom: 100px;
-    left: 100px;
-    background-color: red;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    background-color: violet;
+    z-index: 30;
 } 
